baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__02_parser__attributes.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "WithStartsAs"
    L_BRACE "{"
    FIELD
      WORD "loading_name"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "stream"
        DOT "."
        WORD "starts_as"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL ""
            QUOTE """
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "explicit_null"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "stream"
        DOT "."
        WORD "starts_as"
        ATTRIBUTE_ARGS
          L_PAREN "("
          UNQUOTED_STRING "null"
            WORD "null"
          R_PAREN ")"
    FIELD
      WORD "absent_until_start"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "stream"
        DOT "."
        WORD "starts_as"
        ATTRIBUTE_ARGS
          L_PAREN "("
          UNQUOTED_STRING "never"
            WORD "never"
          R_PAREN ")"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "WithStreamType"
    L_BRACE "{"
    FIELD
      WORD "omitted_field"
      TYPE_EXPR
        STRING_LITERAL "resume"
          QUOTE """
          WORD "resume"
          QUOTE """
      ATTRIBUTE
        AT "@"
        WORD "stream"
        DOT "."
        WORD "type"
        ATTRIBUTE_ARGS
          L_PAREN "("
          UNQUOTED_STRING "never"
            WORD "never"
          R_PAREN ")"
    FIELD
      WORD "name"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "WithSapFlags"
    L_BRACE "{"
    FIELD
      WORD "type"
      TYPE_EXPR
        STRING_LITERAL "resume"
          QUOTE """
          WORD "resume"
          QUOTE """
      ATTRIBUTE "@sap.completed"
        AT "@"
        WORD "sap"
        DOT "."
        WORD "completed"
    FIELD
      WORD "name"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE "@sap.must_start"
        AT "@"
        WORD "sap"
        DOT "."
        WORD "must_start"
    FIELD
      WORD "status"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE "@stream.with_state"
        AT "@"
        WORD "stream"
        DOT "."
        WORD "with_state"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "CombinedAttributes"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "stream"
        DOT "."
        WORD "starts_as"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL ""
            QUOTE """
            QUOTE """
          R_PAREN ")"
      ATTRIBUTE "@stream.with_state"
        AT "@"
        WORD "stream"
        DOT "."
        WORD "with_state"
    FIELD
      WORD "plain"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"

=== ERRORS ===
None
