baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__02_parser__classes.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Inner"
    L_BRACE "{"
    FIELD
      WORD "value"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Outer"
    L_BRACE "{"
    FIELD
      WORD "inner"
      TYPE_EXPR "Inner"
        WORD "Inner"
    R_BRACE "}"

=== ERRORS ===
None
