baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__02_parser__collections.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "WithLists"
    L_BRACE "{"
    FIELD
      WORD "strings"
      TYPE_EXPR "string[]"
        WORD "string"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "ints"
      TYPE_EXPR "int[]"
        WORD "int"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "classes"
      TYPE_EXPR "Inner[]"
        WORD "Inner"
        L_BRACKET "["
        R_BRACKET "]"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "WithMaps"
    L_BRACE "{"
    FIELD
      WORD "simple"
      TYPE_EXPR
        WORD "map"
        TYPE_ARGS
          LESS "<"
          TYPE_EXPR "string"
            WORD "string"
          COMMA ","
          TYPE_EXPR "int"
            WORD "int"
          GREATER ">"
    FIELD
      WORD "complex"
      TYPE_EXPR
        WORD "map"
        TYPE_ARGS
          LESS "<"
          TYPE_EXPR "string"
            WORD "string"
          COMMA ","
          TYPE_EXPR "Inner"
            WORD "Inner"
          GREATER ">"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "WithNested"
    L_BRACE "{"
    FIELD
      WORD "matrix"
      TYPE_EXPR "int[][]"
        WORD "int"
        L_BRACKET "["
        R_BRACKET "]"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "class_matrix"
      TYPE_EXPR "Inner[][]"
        WORD "Inner"
        L_BRACKET "["
        R_BRACKET "]"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "nested_map"
      TYPE_EXPR
        WORD "map"
        TYPE_ARGS
          LESS "<"
          TYPE_EXPR "string"
            WORD "string"
          COMMA ","
          TYPE_EXPR "int[]"
            WORD "int"
            L_BRACKET "["
            R_BRACKET "]"
          GREATER ">"
    FIELD
      WORD "class_nested_map"
      TYPE_EXPR
        WORD "map"
        TYPE_ARGS
          LESS "<"
          TYPE_EXPR "string"
            WORD "string"
          COMMA ","
          TYPE_EXPR "Inner[]"
            WORD "Inner"
            L_BRACKET "["
            R_BRACKET "]"
          GREATER ">"
    R_BRACE "}"

=== ERRORS ===
None
