baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__02_parser__dynamic.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "DynamicClass"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR "string"
        WORD "string"
    BLOCK_ATTRIBUTE "@@dynamic"
      AT_AT "@@"
      KW_DYNAMIC "dynamic"
    R_BRACE "}"

=== ERRORS ===
None
