baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__02_parser__enums.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  ENUM_DEF
    KW_ENUM "enum"
    WORD "Status"
    L_BRACE "{"
    ENUM_VARIANT "Active"
      WORD "Active"
    ENUM_VARIANT "Inactive"
      WORD "Inactive"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "WithEnum"
    L_BRACE "{"
    FIELD
      WORD "status"
      TYPE_EXPR "Status"
        WORD "Status"
    R_BRACE "}"

=== ERRORS ===
None
