baml_language/crates/baml_tests/snapshots/stream_expansion/baml_tests__stream_expansion__02_parser__literals.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "WithLiterals"
    L_BRACE "{"
    FIELD
      WORD "type"
      TYPE_EXPR
        STRING_LITERAL "resume"
          QUOTE """
          WORD "resume"
          QUOTE """
    FIELD
      WORD "version"
      TYPE_EXPR "1"
        INTEGER_LITERAL "1"
    FIELD
      WORD "enabled"
      TYPE_EXPR "true"
        WORD "true"
    R_BRACE "}"

=== ERRORS ===
None
